Bug 122250 - Crash in: std::unique_ptr<long [0],std::default_delete<long [0]> >::~unique_ptr<long [0],std::default_delete<long [0]> >()
Summary: Crash in: std::unique_ptr<long [0],std::default_delete<long [0]> >::~unique_p...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0 target:6.2.1 target:6.1.5
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-12-21 11:52 UTC by Roman Kuznetsov
Modified: 2019-01-15 05:57 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["std::unique_ptr<long [0],std::default_delete<long [0]> >::~unique_ptr<long [0],std::default_delete<long [0]> >()"]


Attachments
bt with debug symbols (21.72 KB, text/plain)
2018-12-31 14:50 UTC, Julien Nabet
Details
bt 2 with debug symbols (5.33 KB, text/plain)
2018-12-31 15:42 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2018-12-21 11:52:14 UTC
This bug was filed from the crash reporting server and is br-0acd3c27-830c-4e48-90ae-647be910a383.
=========================================

Версия: 6.2.0.1
ID сборки: 0412ee99e862f384c1106d0841a950c4cfaa9df1
Потоков ЦП: 4; ОС:Windows 6.1; Отрисовка ИП: по умолчанию; VCL: win; 
Локаль: ru-RU (ru_RU); UI-Language: ru-RU
Calc: threaded

LO crashed when I tried to use extension http://calc-info.de/files/BasicAddonBuilder_LibreOffice_0.5.2.oxt

Steps for repro:
1. Download and install extension into LO
2. restart LO
3. start Writer
4. Click button BasicAddonBuilder on new toolbar
5. LO is crashed

In LO 5.2.7.2 this extension works fine -> regression

ps: I know, that extension problem shouldn't be here, but it's a crash of LO...
Comment 1 Xisco Faulí 2018-12-21 11:56:56 UTC
I can't reproduce it in

Version: 6.3.0.0.alpha0+
Build ID: 7d63c700c36afd27850346e42b92768f084f5d4d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2018-12-21 16:20:55 UTC
I can't reproduce it in

Version: 6.3.0.0.alpha0+
Build ID: a5aeb6b52327565523be406e0082fe0122c48e03
CPU threads: 16; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-US
Calc: threaded
Comment 3 Xisco Faulí 2018-12-21 16:21:50 UTC
However, I can reproduce it in

Versión: 6.2.0.1
Id. de compilación: 0412ee99e862f384c1106d0841a950c4cfaa9df1
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; VCL: win; 
Configuración regional: es-ES (es_ES); Idioma de IU: es-ES
Calc: threaded
Comment 4 Xisco Faulí 2018-12-21 16:43:58 UTC
However, I can't reproduce it in

Version: 6.2.0.1.0+
Build ID: 2c0c0794a8e287497e460f3f1e6bcba585d675d4
CPU threads: 16; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-US
Calc: threaded

so i can't bisect it...
Comment 5 Julien Nabet 2018-12-31 14:50:29 UTC
Created attachment 147908 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today + gtk3 and enable-dbgutil, I got an assert.
Comment 6 Julien Nabet 2018-12-31 15:42:20 UTC
Created attachment 147911 [details]
bt 2 with debug symbols

I noticed that some borders had value to -1 to indicate no border whereas it should be 0.
I uninstalled the extension, unpacked oxt, changed the value, rezip and reinstalled.
I got another assertion
This time I don't know what's the pb.

Anyway it's quite an old extension, 2008 if INSTALL.txt is up-to-date.
Comment 7 Aron Budea 2019-01-01 02:56:15 UTC
Bibisected to the following commit using repo bibisect-win32-5.3. Adding Cc: to Noel Grandin, please take a look sometimes.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=4e07987ce8134312920682e3481c3f8e3d7b66c3
author		Noel Grandin <noel@peralex.com>	2016-08-25 15:08:55 +0200
committer	Noel Grandin <noel@peralex.com>	2016-08-29 09:23:46 +0200

cid#1371154 Missing move assignment operator
Comment 8 Commit Notification 2019-01-14 14:04:45 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/1977291fc08de7425db469e21bd2ad385e722707%5E%21

tdf#122250 Crash when running extension

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2019-01-15 05:57:41 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/c906431aabf1e0c00f1048bf580beeb3d52349d9%5E%21

tdf#122250 Crash when running extension

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2019-01-15 05:57:51 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/b2fa854e81d329c9ed49bd10944cea1a430ecf7e%5E%21

tdf#122250 Crash when running extension

It will be available in 6.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.