tdf#122250 Crash when running extension

as a consequence of

    commit 4e07987ce8134312920682e3481c3f8e3d7b66c3
    Date:   Thu Aug 25 15:08:55 2016 +0200
    cid#1371154 Missing move assignment operator

this extensions appears to pass bogus data into VCLXWindow::setProperty,
so I had to workaround that when debugging

Change-Id: Ib6728c0a990bd7cfbfed43d79b7560bd2f7f5a67